# toyrpc

./: CMakeLists.txt  Makefile  calc.idl
cmake/: FindSodium.cmake
include/: ast.h  calculator.h  calculator_serde.h  mstch_gen.h  networking.h  parser.h  tokenizer.h
src/: calculator_runtime.cpp  calculator_serde.cpp  main.cpp  mstch_gen.cpp  networking.cpp  parser.cpp  tokenizer.cpp
template/: serde.cpp.mustache  serde.h.mustache
test/: parser_test.cpp  rpc_test.cpp  tokenizer_test.cpp
